--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en" ng-app="myApp">
+<head ng-controller="commonController">
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!--bootstrap for viewing on different devices-->
-  <title>Nigel David - Portfolio</title>
+  <title>{{title}}</title>
 
   <!-- External styles and fonts -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
@@ -18,14 +18,20 @@
   <!-- Custom styles CSS -->
   <link href="styles/css/resume.css" rel="stylesheet">
 
+  <!-- External scripts -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>    
+
 </head>
 
-<body ng-app="myApp" id="page-top">
+<body id="page-top" ng-controller="commonController" ng-cloak>
 
   <!-- Create the navigation menu -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Nigel David - Portfolio</span>
+      <span class="d-block d-lg-none">{{title}}</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/profile.jpg" alt="">
       </span>
@@ -51,7 +57,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <l2 class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="docs/Nigel_David_Resume_2017.pdf" target="_blank">Full Resume</a>
+          <a class="nav-link js-scroll-trigger" ng-href="{{resumePath}}" target="_blank">Full Resume</a>
         </l2>
       </ul>
     </div>
@@ -66,20 +72,20 @@
           <span class="text-primary">{{lastname}}</span>
         </h1>
         <div class="subheading mb-5">{{location}} · 
-          <a href="mailto:nigel.a.david@gmail.com">{{email}}</a>
+          <a ng-href="{{getEmailHref(email)}}">{{email}}</a>
         </div>
         <p class="mb-5">{{aboutText}}</p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/nigel-david-95630472" target="_blank">
+            <a ng-href="{{linkedInLink}}" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
-          <li class="list-inline-item">
-            <a href="https://github.com/notnigel?tab=repositories" target="_blank">
+          <li class="list-inline-item" ng-if="exists(gitHubLink)">
+            <a ng-href="{{gitHubLink}}" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -113,16 +119,15 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education" ng-controller="educationController">
       <div class="my-auto">
         <h2 class="mb-5">Education</h2>
-
         <div class="resume-item d-flex flex-column flex-md-row mb-5" ng-repeat="educationItem in educationCollection">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">{{educationItem.school}}</h3>
-            <div class="subheading mb-3">{{educationItem.dates}}</div>
-            <div>{{educationItem.major}}</div>
-            <p>{{educationItem.relevantCourses}}</p>
+            <div class="subheading mb-3">{{educationItem.major}}</div>
+            <p ng-if="exists(educationItem.gpa)">{{getGpa(educationItem.gpa)}}</p>
+            <p ng-if="exists(educationItem.relevantCourses)">{{getRelavantCourses(educationItem.relevantCourses)}}</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">{{educationItem.dates}}</span>
           </div>
         </div>
 
@@ -137,27 +142,20 @@
         <ul class="fa-ul mb-0" ng-controller="skillsController">
           <li ng-repeat="skillsItem in skillsCollection">
             <i class="fa-li fa fa-check" ></i>
-          {{skillsItem.skill}}</li>
+            {{skillsItem.skill}}</li>
         </ul>
       </div>
     </section>
 
     <!-- Create the Interests section -->
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests" ng-controller="interestsController">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p>When I'm not working, I like to further myself through learning. I am an avid mountain biker and traveller.</p>
-        <p> I also like to make fun of Lou in my free time.</p>
+        <p>{{interestsLine}}</p>
       </div>
     </section>
 
   </div>
-
-  <!-- External scripts -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>    
 
   <!-- Custom scripts -->
   <script src="scripts/resume.js"></script>
